# gd

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  configure.ac
.github/workflows/: ci_gd3.yml  ci_macos.yml  ci_ubuntu.yml  ci_windows.yml  ci_windows_mingw.yml  codecov.yml  coverity.yml  fuzz-codecs.yml
cmake/modules/: FindJXL.cmake
docs/: CMakeLists.txt  Doxyfile  README.TESTING  codecs.md  vector2d.md
docs/naturaldocs/project/: Menu.txt
examples/: CMakeLists.txt  composite_operators.c  ctx_image_advanced.c  ctx_image_basic.c  ctx_image_blend_modes.c  curvedrectangle.c  curveto.c  fillandstroke.c  gif_frames.c  gif_rewrite.c  gradient_art.c  gradient_operators.c  jxl_create_anim.c  jxl_create_anim_vector.c  jxl_frames.c  path_arcfillimage.c  path_imagesource.c  path_pattern.c  patharc.c  pathclip.c  pathnegativearc.c  scale_entropy_visual_check.c  smiley.c  smileylarge.c  tiff_pages.c  tiff_write_pages.c  tiger.c  tigerclipped.c  uhdr.c  vector2d_example.h  vector2d_pattern_filter.c  webp_frames.c  webp_rewrite.c
examples/scale_entropy_source_images/: README.md
src/: CMakeLists.txt  Makefile.am  bmp.h  config.h.cmake  gd.c  gd.h  gd_avif.c  gd_bmp.c  gd_color_match.c  gd_compositor.c  gd_draw.c  gd_draw_blend.c  gd_filename.c  gd_filter.c  gd_gd.c  gd_gd2.c  gd_gif_in.c  gd_gif_out.c  gd_heif.c  gd_interpolation.c  gd_io_file.c  gd_jpeg.c  gd_jxl.c  gd_matrix.c  gd_metadata.c  gd_path.c  gd_perceptual_diff.c  gd_png.c  gd_qoi.c  gd_qoi.h  gd_readimage.c  gd_span_rle.c  gd_tiff.c  gd_uhdr.c  gd_vector2d.h  gd_vector2d_private.h  gd_wbmp.c  gd_webp.c  gd_xbm.c  gdft.c  (+2 more)
tests/: CMakeLists.txt  Makefile.am
tests/bmp/: CMakeLists.txt  Makemodule.am  bmpsuite.c
tests/fuzzing/: CMakeLists.txt  README.md  fuzz_bmp_decode.c  fuzz_gif_decode.c  fuzz_jpeg_decode.c  fuzz_jxl_decode.c  fuzz_png_decode.c  fuzz_tiff_decode.c  fuzz_uhdr_decode.c  fuzz_webp_decode.c
tests/gdimageaffine/: CMakeLists.txt  Makemodule.am  alpha_weight.c  edge.c  fractional.c  interpolation.c  matrix.c  rotate.c  visual.c
tests/gdimagecomposite/: CMakeLists.txt  Makemodule.am  compose.c
tests/gdimagerotate/: CMakeLists.txt  Makemodule.am  alpha_weight.c
tests/gdimagescale/: options_content_aware.c  options_fit.c
tests/gdimagesetinterpolationmethod/: github_bug_00847.c
tests/gdimagestringft/: gdimagestringft_bbox.c
tests/gdinterpolatedscale/: CMakeLists.txt  Makemodule.am  alpha_weight.c  scale_flow.c
tests/gdtest/: gdpdiff.c  gdtest.c  gdtest.h
tests/gdtransformaffineboundingbox/: CMakeLists.txt  Makemodule.am  bug_pr_00996.c  github_bug_00221.c
tests/gif/: CMakeLists.txt  Makemodule.am  animated_gif_reader.c  bug000498.c  bug00060.c  bug000971.c  bug00499.c  gif_conformance.c  ossfuzz5700.c
tests/gif/gif-conformance/: README.md  generate.py
tests/jpeg/: CMakeLists.txt  Makemodule.am  jpeg_conformance.c  jpeg_read_options.c  jpeg_write_options.c
tests/jpeg/conformance/: README.md  SOURCES.md
tests/jpeg/conformance/crash-repro/: README.md
tests/jpeg/conformance/non-conformant/extraneous-data/: extraneous-bytes-after-sos.txt
tests/jpeg/conformance/non-conformant/marker-quirks/: multiple-0xff-before-eoi.txt
tests/jpeg/conformance/non-conformant/metadata-quirks/: icc_chunk_count_mismatch.txt  icc_chunk_double_seq_no.txt  icc_chunk_order.txt  icc_chunk_seq_no_0.txt  icc_missing_chunk.txt
tests/jpeg/conformance/non-conformant/progressive-quirks/: mozjpeg-rs-ac-refine-q95.txt
tests/jpeg/conformance/non-conformant/truncated/: after_app0.txt  after_soi.txt  after_sos.txt  mid_header.txt  missing-frame-image-1410.txt  missing_eoi.txt  progressive_25pct.txt  progressive_50pct.txt  progressive_75pct.txt  scan_10pct.txt  scan_50pct.txt  scan_90pct.txt
tests/jxl/: .gitignore  CMakeLists.txt  Makemodule.am  alpha_distance_1_0.jxl  animation_distance_0_0.jxl  animation_distance_1_0.jxl  flower_small_rgb.jxl  flower_small_rgb_lossless.jxl  flower_small_rgba.jxl  generate_test_images.sh  jxl_alpha.c  jxl_anim.c  jxl_anim_lossless.c  jxl_anim_raw.c  jxl_api_symbols.c  jxl_conformance.c  jxl_im2im.c  jxl_lossless_im2im.c  jxl_null.c  jxl_palette.c  jxl_read_file.c  jxl_still_as_anim.c  jxl_test_helpers.h  palette_358.jxl
tests/metadata/: CMakeLists.txt  Makemodule.am  jpeg_exiv2.cpp  jpeg_metadata.c  metadata_core.c  png_exiv2.cpp  png_metadata.c
tests/perceptualdiff/: test_core.c
tests/png/: png_conformance.c  png_resolution.c  png_write_options.c
tests/qoi/: CMakeLists.txt  Makemodule.am  qoi_conformance.c  qoi_im2im.c  qoi_null.c
tests/readimage/: CMakeLists.txt  Makemodule.am  readimage.c
tests/tiff/: CMakeLists.txt  Makemodule.am  tiff_conformance.c  tiff_write.c
tests/uhdr/: CMakeLists.txt  Makemodule.am  uhdr_cli_parity_noop.c  uhdr_null.c  uhdr_plain_jpeg_rejected.c  uhdr_ptr_roundtrip.c  uhdr_roundtrip.c
tests/vector2d/: CMakeLists.txt  compositor.c  gd_operators.c  gradient.c  image_context.c  path_ops.c  path_structure.c  pattern_filter.c  raster_parity.c
tests/webp/: webp_anim.c  webp_api_symbols.c  webp_conformance.c
