CMAKE_MINIMUM_REQUIRED(VERSION 3.7...3.10 FATAL_ERROR)
project(GD)
SET(PACKAGE GD)
SET(PACKAGE_NAME GD)



SET(CMAKE_MODULE_PATH "${GD_SOURCE_DIR}/cmake/modules")

include(gd)

OPTION(ENABLE_GD_FORMATS "Enable GD image formats" 0)
OPTION(ENABLE_CORRECTED_LEGACY_COMPOSITING "Use the experimental normalized compositor in legacy blending APIs" 0)
OPTION(ENABLE_PNG "Enable PNG support" 0)
OPTION(ENABLE_LIQ "Enable libimagequant support" 0)
OPTION(ENABLE_JPEG "Enable JPEG support" 0)
OPTION(ENABLE_TIFF "Enable TIFF support" 0)
OPTION(ENABLE_ICONV "Enable ICONV support" 0)
OPTION(ENABLE_XPM "Enable XPM support" 0)
OPTION(ENABLE_FREETYPE "Enable Freetype2 support" 0)
OPTION(ENABLE_FONTCONFIG "Enable FontConfig support" 0)
OPTION(ENABLE_WEBP "Enable WebP support" 0)
OPTION(ENABLE_JXL "Enable JPEG XL support" 0)
OPTION(ENABLE_HEIF "Enable HEIF support" 0)
OPTION(ENABLE_AVIF "Enable AVIF support" 0)
OPTION(ENABLE_ULTRAHDR "Enable UltraHDR support" 0)
OPTION(ENABLE_RAQM "Enable RAQM support" 0)
OPTION(ENABLE_ASAN "Enable (gcc) ASAN support" 0)
OPTION(ENABLE_CPP "Enable CPP GD API" 1)
OPTION(VERBOSE_MAKEFILE "Enable CMAKE_VERBOSE_MAKEFILE" 0)
OPTION(BUILD_TESTS "Build tests" 1)
OPTION(BUILD_EXAMPLES "Build examples" 1)
OPTION(BUILD_PROGRAMS "Build programs" 1)
OPTION(BUILD_DOCS "Build docs" 1)
OPTION(BUILD_CPACK "Build CPACK" 1)

if (VERBOSE_MAKEFILE)
	set(CMAKE_VERBOSE_MAKEFILE ON)
endif (VERBOSE_MAKEFILE)

if (BUILD_TESTS)
	ENABLE_TESTING()
endif(BUILD_TESTS)

# if you would like to pass C flags to the compiler, then just
# - specify -DCMAKE_C_FLAGS=... on invocation of cmake, or
# - specify CFLAGS=... on invocation of make
if(CMAKE_C_COMPILER_ID STREQUAL "GNU")
  # Re-enable sanitize once we find a way to filter out errors in external libraries (like HEIF)
  if (ENABLE_ASAN)
  	SET(CMAKE_C_FLAGS_DEBUG "-g -Wall -Wextra -O0 -fsanitize=address") # will be added to CMAKE_C_FLAGS when CMAKE_BUILD_TYPE is Debug
  else (ENABLE_ASAN)
  	SET(CMAKE_C_FLAGS_DEBUG "-g -Wall -Wextra -O0 ") # will be added to CMAKE_C_FLAGS when CMAKE_BUILD_TYPE is Debug
  endif (ENABLE_ASAN)
endif()
SET (CMAKE_LIBRARY_OUTPUT_DIRECTORY
  ${PROJECT_BINARY_DIR}/Bin
  CACHE PATH
  "Single Directory for all Libraries"
  )

# --------- Setup the Executable output Directory -------------
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY
  ${PROJECT_BINARY_DIR}/Bin
  CACHE PATH
  "Single Directory for all Executables."
  )

# --------- Setup the Executable output Directory -------------
SET (CMAKE_ARCHIVE_OUTPUT_DIRECTORY
  ${PROJECT_BINARY_DIR}/Bin
  CACHE PATH
  "Single Directory for all static libraries."
  )

include(CheckFunctionExists)

# Detect whether we need to link against libm.
if(NOT SIN_FUNCTION_EXISTS AND NOT NEED_LINKING_AGAINST_LIBM)
	CHECK_FUNCTION_EXISTS(sin SIN_FUNCTION_EXISTS)
	if(NOT SIN_FUNCTION_EXISTS)
		unset(SIN_FUNCTION_EXISTS CACHE)
		set(CMAKE_REQUIRED_LIBRARIES_SAVE ${CMAKE_REQUIRED_LIBRARIES})
		list(APPEND CMAKE_REQUIRED_LIBRARIES m)
		CHECK_FUNCTION_EXISTS(sin SIN_FUNCTION_EXISTS)
		set(CMAKE_REQUIRED_LIBRARIES ${CMAKE_REQUIRED_LIBRARIES_SAVE})
		if(SIN_FUNCTION_EXISTS)
			set(NEED_LINKING_AGAINST_LIBM True CACHE BOOL "" FORCE)
		else()
			message(FATAL_ERROR "Failed making the sin() function available")
		endif()
	endif()
endif()

SET(PKG_REQUIRES_PRIVATES "")

if (USE_EXT_GD)
	message("Using GD at: ${USE_EXT_GD}")
	INCLUDE_DIRECTORIES(BEFORE ${GD_INCLUDE_DIR})
	FIND_PACKAGE(GD)
	if (GD_FOUND)
		INCLUDE_DIRECTORIES(BEFORE ${GD_INCLUDE_DIR})
		LINK_DIRECTORIES(${GD_LIBRARIES})
		SET(GD_LIB ${GD_LIBRARIES})
		SET(GD_LIBS_DIR ${GD_LIBRARY})

		message("GD libs #: ${GD_LIBRARIES}")
		message("GD lib #: ${GD_LIBRARY}")
		message("GD include: ${GD_INCLUDE_DIR}")
	else (GD_FOUND)
		message("No gd found")
	endif (GD_FOUND)
else (USE_EXT_GD)

	MACRO(GV VER VAR)
		file (STRINGS "src/gd.h" _VERSION_LINE REGEX "define[ ]+GD_${VER}_VERSION")
		if (_VERSION_LINE)
			string ( REGEX REPLACE ".*define[ ]+GD_${VER}_VERSION[ ]+\"?([0-9]*).*" "\\1" ${VAR} "${_VERSION_LINE}" )
		endif (_VERSION_LINE)
	ENDMACRO(GV)

	GV(MAJOR GDLIB_MAJOR)
	GV(MINOR GDLIB_MINOR)
	GV(RELEASE GDLIB_REVISION)
	GV(EXTRA GDLIB_EXTRA)
	SET(GDLIB_VERSION "${GDLIB_MAJOR}.${GDLIB_MINOR}.${GDLIB_REVISION}${GDLIB_EXTRA}")
	MESSAGE(STATUS "gd version ${GDLIB_VERSION}")

	MACRO(GV_LT VER VAR)
		execute_process(
			COMMAND sh ${CMAKE_CURRENT_SOURCE_DIR}/config/getlib.sh ${VER}
			OUTPUT_VARIABLE ${VAR}
		)
	ENDMACRO(GV_LT)

	GV_LT(SONAME GDLIB_LIB_SOVERSION)
	GV_LT(VERSION GDLIB_LIB_VERSION)
	MESSAGE(STATUS "gd shared lib version ${GDLIB_LIB_SOVERSION} (${GDLIB_LIB_VERSION})")

	include(CheckIncludeFiles)
	include(CheckIncludeFile)

	include(AC_HEADER_STDC)
	include(CheckPrototypeExists)

	if (ENABLE_GD_FORMATS)
		FIND_PACKAGE(ZLIB REQUIRED)
	endif (ENABLE_GD_FORMATS)

	if (ENABLE_PNG)
		FIND_PACKAGE(PNG REQUIRED)
	endif (ENABLE_PNG)

	if (ENABLE_ICONV)
		FIND_PACKAGE(ICONV REQUIRED)
	endif (ENABLE_ICONV)

	IF (ENABLE_WEBP)
		FIND_PACKAGE(WEBP REQUIRED)
	ENDIF (ENABLE_WEBP)

	IF (ENABLE_JXL)
		FIND_PACKAGE(JXL REQUIRED)
	ENDIF (ENABLE_JXL)

	IF (ENABLE_HEIF)
		FIND_PACKAGE(HEIF REQUIRED)
	ENDIF (ENABLE_HEIF)

	IF (ENABLE_AVIF)
		FIND_PACKAGE(libavif 1 REQUIRED CONFIG)
		SET(HAVE_LIBAVIF 1)
		SET(AVIF_LIBRARIES avif)
		SET(AVIF_FOUND 1)
	ENDIF (ENABLE_AVIF)
	IF (ENABLE_ULTRAHDR)
		find_package(PkgConfig QUIET)
		if (PkgConfig_FOUND)
			pkg_check_modules(UHDR_PKG QUIET libuhdr>=1.4.0)
		endif()

		find_path(UHDR_INCLUDE_DIR
			NAMES ultrahdr_api.h
			HINTS ${UHDR_PKG_INCLUDE_DIRS} /usr/local/include /usr/include
			PATH_SUFFIXES include include/ultrahdr)
		find_library(UHDR_LIBRARY
			NAMES uhdr libuhdr ultrahdr
			HINTS ${UHDR_PKG_LIBRARY_DIRS} /usr/local/lib /usr/lib
			PATH_SUFFIXES lib)

		if (UHDR_LIBRARY AND UHDR_INCLUDE_DIR)
			SET(HAVE_LIBUHDR 1)
			SET(UHDR_FOUND 1)
			SET(UHDR_LIBRARIES ${UHDR_LIBRARY})

			# --- NEW CHECK FOR UHDR_WRITE_XMP ---
			if (PkgConfig_FOUND AND UHDR_PKG_FOUND)
				# Extract the variable value from the .pc file
				pkg_get_variable(UHDR_XMP_STATUS libuhdr UHDR_WRITE_XMP)
				
				# Check if it is ON, TRUE, or 1
				if (UHDR_XMP_STATUS)
					message(FATAL_ERROR "libuhdr was compiled with UHDR_WRITE_XMP enabled, but this project requires it to be OFF.")
				endif()
			endif()
			# ------------------------------------

		else ()
			message(FATAL_ERROR "ENABLE_ULTRAHDR is enabled but libuhdr >= 1.4.0 was not found")
		endif ()
	ENDIF (ENABLE_ULTRAHDR)


	IF (ENABLE_LIQ)
		FIND_PACKAGE(LIQ REQUIRED)
	ENDIF (ENABLE_LIQ)

	IF (NOT WIN32)
		FIND_PACKAGE(PTHREAD)
	ENDIF (NOT WIN32)

	if (ENABLE_JPEG)
		FIND_PACKAGE(JPEG REQUIRED)
	endif (ENABLE_JPEG)

	if (ENABLE_TIFF)
		FIND_PACKAGE(TIFF REQUIRED)
	endif (ENABLE_TIFF)

	if (ENABLE_FREETYPE)
		FIND_PACKAGE(Freetype REQUIRED)
	endif (ENABLE_FREETYPE)

	if (ENABLE_XPM)
		FIND_PACKAGE(XPM REQUIRED)
	endif (ENABLE_XPM)

	if (ENABLE_FONTCONFIG)
		FIND_PACKAGE(Fontconfig REQUIRED)
		if (Fontconfig_FOUND)
			set(FONTCONFIG_FOUND ${Fontconfig_FOUND})
			set(FONTCONFIG_LIBRARY ${Fontconfig_LIBRARY})
			set(FONTCONFIG_INCLUDE_DIR ${Fontconfig_INCLUDE_DIR})
		endif ()
	endif (ENABLE_FONTCONFIG)

	if (ENABLE_RAQM)
		FIND_PACKAGE(RAQM REQUIRED)
	endif (ENABLE_RAQM)

	SET(ENABLE_GD_FORMATS ${ENABLE_GD_FORMATS})

	if (ENABLE_FREETYPE AND NOT FREETYPE_FOUND)
		message(FATAL_ERROR "ENABLE_FREETYPE is set but freetype2 was not found")
	endif ()
	if (FREETYPE_FOUND)
		INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIRS})
		SET(HAVE_FT2BUILD_H 1)
		SET(HAVE_LIBFREETYPE 1)
		LIST(APPEND PKG_REQUIRES_PRIVATES freetype2)
	ENDIF(FREETYPE_FOUND)

	IF(ENABLE_GD_FORMATS AND NOT ZLIB_FOUND)
		message(FATAL_ERROR "ENABLE_GD_FORMATS is set but zlib was not found")
	endif ()
	IF(ZLIB_FOUND)
		INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
		SET(HAVE_LIBZ 1)
		LIST(APPEND PKG_REQUIRES_PRIVATES zlib)
	ENDIF(ZLIB_FOUND)

	IF(ENABLE_WEBP AND NOT WEBP_FOUND)
		message(FATAL_ERROR "ENABLE_WEBP is set but libwebp was not found")
	endif ()
	IF(WEBP_FOUND)
		INCLUDE_DIRECTORIES(${WEBP_INCLUDE_DIR})
		SET(HAVE_LIBWEBP 1)
		LIST(APPEND PKG_REQUIRES_PRIVATES libwebp libwebpdemux libwebpmux)
	ENDIF(WEBP_FOUND)

	IF(ENABLE_JXL AND NOT JXL_FOUND)
		message(FATAL_ERROR "ENABLE_JXL is set but libjxl was not found")
	endif ()
	IF(JXL_FOUND)
		INCLUDE_DIRECTORIES(${JXL_INCLUDE_DIR})
		SET(HAVE_LIBJXL 1)
		LIST(APPEND PKG_REQUIRES_PRIVATES libjxl libjxl_cms)
	ENDIF(JXL_FOUND)

	IF(ENABLE_HEIF AND NOT HEIF_FOUND)
		message(FATAL_ERROR "ENABLE_HEIF is set but libheif was not found")
	endif ()
	IF(HEIF_FOUND)
		INCLUDE_DIRECTORIES(${HEIF_INCLUDE_DIR})
		SET(HAVE_LIBHEIF 1)
	ENDIF(HEIF_FOUND)

	IF(ENABLE_ULTRAHDR AND NOT UHDR_FOUND)
		message(FATAL_ERROR "ENABLE_ULTRAHDR is set but libuhdr was not found")
	endif ()
	IF(UHDR_FOUND)
		INCLUDE_DIRECTORIES(${UHDR_INCLUDE_DIR})
		SET(HAVE_LIBUHDR 1)
		LIST(APPEND PKG_REQUIRES_PRIVATES libuhdr)
	ELSE(UHDR_FOUND)
		SET(UHDR_LIBRARY "")
		SET(UHDR_INCLUDE_DIR "")
	ENDIF(UHDR_FOUND)

	IF(ENABLE_PNG AND NOT PNG_FOUND)
		message(FATAL_ERROR "ENABLE_PNG is set but libpng was not found")
	endif ()
	IF(PNG_FOUND)
		INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIR})
		SET(HAVE_LIBPNG 1)
		LIST(APPEND PKG_REQUIRES_PRIVATES libpng)
	ENDIF(PNG_FOUND)

	IF(ENABLE_ICONV AND NOT ICONV_FOUND)
		message(FATAL_ERROR "ENABLE_ICONV is set but iconv was not found")
	endif ()
	IF(ICONV_FOUND)
		INCLUDE_DIRECTORIES(${ICONV_INCLUDE_DIR})
		SET(HAVE_ICONV 1)
		SET(HAVE_ICONV_H 1)
	ENDIF(ICONV_FOUND)

	IF(ENABLE_LIQ AND NOT LIQ_FOUND)
		message(FATAL_ERROR "ENABLE_LIQ is set but libimagequant was not found")
	endif ()
	IF(LIQ_FOUND)
		INCLUDE_DIRECTORIES(${LIQ_INCLUDE_DIR})
		SET(HAVE_LIBIMAGEQUANT 1)
	ENDIF(LIQ_FOUND)

	IF(ENABLE_XPM AND NOT XPM_FOUND)
		message(FATAL_ERROR "ENABLE_XPM is set but libxpm was not found")
	endif ()
	IF(XPM_FOUND)
		INCLUDE_DIRECTORIES(${XPM_INCLUDE_DIR})
		SET(HAVE_LIBXPM 1)
		LIST(APPEND PKG_REQUIRES_PRIVATES xpm)
	ENDIF(XPM_FOUND)

	IF(ENABLE_JPEG AND NOT JPEG_FOUND)
		message(FATAL_ERROR "ENABLE_JPEG is set but libjpeg was not found")
	endif ()
	IF(JPEG_FOUND)
		INCLUDE_DIRECTORIES(${JPEG_INCLUDE_DIR})
		SET(HAVE_LIBJPEG 1)
		LIST(APPEND PKG_REQUIRES_PRIVATES libjpeg)
	ENDIF(JPEG_FOUND)

	IF(ENABLE_TIFF AND NOT TIFF_FOUND)
		message(FATAL_ERROR "ENABLE_TIFF is set but libtiff was not found")
	endif ()
	IF(TIFF_FOUND)
		INCLUDE_DIRECTORIES(${TIFF_INCLUDE_DIR})
		SET(HAVE_LIBTIFF 1)
		LIST(APPEND PKG_REQUIRES_PRIVATES libtiff-4)
	ENDIF(TIFF_FOUND)

	IF(ENABLE_FONTCONFIG AND NOT FONTCONFIG_FOUND)
		message(FATAL_ERROR "ENABLE_FONTCONFIG is set but fontconfig was not found")
	endif ()
	IF(FONTCONFIG_FOUND)
		INCLUDE_DIRECTORIES(${FONTCONFIG_INCLUDE_DIR})
		SET(HAVE_LIBFONTCONFIG 1)
		LIST(APPEND PKG_REQUIRES_PRIVATES fontconfig)
	ELSE(FONTCONFIG_FOUND)
		SET(FONTCONFIG_LIBRARY "")
		SET(FONTCONFIG_INCLUDE_DIR "")
		SET(FONTCONFIG_LIB_DIR "")
	ENDIF(FONTCONFIG_FOUND)

	IF(ENABLE_RAQM AND NOT RAQM_FOUND)
		message(FATAL_ERROR "ENABLE_RAQM is set but libraqm was not found")
	endif ()
	IF(RAQM_FOUND)
		INCLUDE_DIRECTORIES(${RAQM_INCLUDE_DIR})
		SET(HAVE_RAQM 1)
		LIST(APPEND PKG_REQUIRES_PRIVATES raqm)
	ENDIF(RAQM_FOUND)

	string(REPLACE ";" ", " PKG_REQUIRES_PRIVATES "${PKG_REQUIRES_PRIVATES}")
	SET(HAVE_CONFIG_H 1)

	ADD_DEFINITIONS(-DHAVE_CONFIG_H)

	CHECK_INCLUDE_FILE("stdint.h"	HAVE_STDINT_H)
	CHECK_INCLUDE_FILE("inttypes.h"	HAVE_INTTYPES_H)

	include(CheckTypeSize)
	check_type_size("int64_t" INT64_T)

	CONFIGURE_FILE(${GD_SOURCE_DIR}/src/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/src/config.h ESCAPE_QUOTES)
	include_directories(${CMAKE_CURRENT_BINARY_DIR}/src)

	option(BUILD_SHARED_LIBS "Build shared libs" ON)
	option(BUILD_STATIC_LIBS "Build static libs" OFF)

	if (WIN32)
		SET(GD_LIB libgd)
		ADD_DEFINITIONS( -DWIN32 -D_WIN32 -DMSWIN32 -DBGDWIN32 -DWINVER=0x0500  -D_WIN32_WINNT=0x0500 -D_WIN32_IE=0x0600)

		if(NOT MINGW AND MSVC_VERSION GREATER 1399)
			ADD_DEFINITIONS("/D_CRT_SECURE_NO_DEPRECATE")
		endif(NOT MINGW AND MSVC_VERSION GREATER 1399)
		if (MINGW OR MSYS)
			SET(GD_LIB gd)
			ADD_DEFINITIONS("-mms-bitfields") # -m32
		endif (MINGW OR MSYS)
	else (WIN32)
		SET(GD_LIB gd)
	endif (WIN32)

	SET(GD_LIB_STATIC "${GD_LIB}_static")

	IF(PROFILE)
		add_definitions("-pg")
		set(CMAKE_EXE_LINKER_FLAGS ${LINK_FLAGS} "-pg")
	ENDIF(PROFILE)

	SET(GD_INCLUDE_DIR "${GD_SOURCE_DIR}/src" "${GD_SOURCE_DIR}")
	INCLUDE_DIRECTORIES(before ${FONTCONFIG_INCLUDE_DIR})

	add_subdirectory(src)
endif (USE_EXT_GD)

if(BUILD_TESTS)
add_subdirectory(tests)
endif (BUILD_TESTS)
if(BUILD_EXAMPLES)
add_subdirectory(examples)
endif(BUILD_EXAMPLES)
if(BUILD_DOCS)
add_subdirectory(docs)
endif(BUILD_DOCS)

add_custom_target(distclean ${GD_SOURCE_DIR}/cmake/distclean.sh)
if(BUILD_CPACK)
SET(CPACK_PACKAGE_NAME "libgd")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "libGD, powerful and easy to use graphic library")
SET(CPACK_PACKAGE_VENDOR "https://libgd.github.io")
SET(CPACK_PACKAGE_VERSION_MAJOR ${GDLIB_MAJOR})
SET(CPACK_PACKAGE_VERSION_MINOR ${GDLIB_MINOR})
SET(CPACK_PACKAGE_VERSION_PATCH ${GDLIB_REVISION}${GDLIB_EXTRA})

if(WIN32)
	set(CPACK_GENERATOR ZIP)
else(WIN32)
	set(CPACK_GENERATOR TGZ)
endif(WIN32)
endif (BUILD_CPACK)

if(BUILD_DOCS)
INSTALL(FILES docs/INSTALL DESTINATION share/doc/gd-${GDLIB_MAJOR}.${GDLIB_MINOR})
INSTALL(FILES docs/README.JPN DESTINATION share/doc/gd-${GDLIB_MAJOR}.${GDLIB_MINOR})
INSTALL(FILES docs/README.CMAKE DESTINATION share/doc/gd-${GDLIB_MAJOR}.${GDLIB_MINOR})
INSTALL(FILES docs/README.TESTING DESTINATION share/doc/gd-${GDLIB_MAJOR}.${GDLIB_MINOR})
INSTALL(FILES docs/README.TXT DESTINATION share/doc/gd-${GDLIB_MAJOR}.${GDLIB_MINOR})
endif(BUILD_DOCS)

if(BUILD_EXAMPLES)
INSTALL(FILES examples/arc.c DESTINATION share/doc/gd-${GDLIB_MAJOR}.${GDLIB_MINOR})
INSTALL(FILES examples/copyrotated.c DESTINATION share/doc/gd-${GDLIB_MAJOR}.${GDLIB_MINOR})
INSTALL(FILES examples/crop.c DESTINATION share/doc/gd-${GDLIB_MAJOR}.${GDLIB_MINOR})
INSTALL(FILES examples/flip.c DESTINATION share/doc/gd-${GDLIB_MAJOR}.${GDLIB_MINOR})
INSTALL(FILES examples/gif.c DESTINATION share/doc/gd-${GDLIB_MAJOR}.${GDLIB_MINOR})
INSTALL(FILES examples/gif_frames.c DESTINATION share/doc/gd-${GDLIB_MAJOR}.${GDLIB_MINOR})
INSTALL(FILES examples/gif_rewrite.c DESTINATION share/doc/gd-${GDLIB_MAJOR}.${GDLIB_MINOR})
INSTALL(FILES examples/jxl_create_anim.c DESTINATION share/doc/gd-${GDLIB_MAJOR}.${GDLIB_MINOR})
INSTALL(FILES examples/jxl_frames.c DESTINATION share/doc/gd-${GDLIB_MAJOR}.${GDLIB_MINOR})
INSTALL(FILES examples/nnquant.c DESTINATION share/doc/gd-${GDLIB_MAJOR}.${GDLIB_MINOR})
INSTALL(FILES examples/noIcon.pic DESTINATION share/doc/gd-${GDLIB_MAJOR}.${GDLIB_MINOR})
INSTALL(FILES examples/noIcon.sgi DESTINATION share/doc/gd-${GDLIB_MAJOR}.${GDLIB_MINOR})
INSTALL(FILES examples/noIcon.tga DESTINATION share/doc/gd-${GDLIB_MAJOR}.${GDLIB_MINOR})
INSTALL(FILES examples/noIconAlpha.tga DESTINATION share/doc/gd-${GDLIB_MAJOR}.${GDLIB_MINOR})
INSTALL(FILES examples/test_crop_threshold.png DESTINATION share/doc/gd-${GDLIB_MAJOR}.${GDLIB_MINOR})
INSTALL(FILES examples/tgaread.c DESTINATION share/doc/gd-${GDLIB_MAJOR}.${GDLIB_MINOR})
INSTALL(FILES examples/tiffread.c DESTINATION share/doc/gd-${GDLIB_MAJOR}.${GDLIB_MINOR})
INSTALL(FILES examples/tiff_write_pages.c DESTINATION share/doc/gd-${GDLIB_MAJOR}.${GDLIB_MINOR})
INSTALL(FILES examples/uhdr.c DESTINATION share/doc/gd-${GDLIB_MAJOR}.${GDLIB_MINOR})
INSTALL(FILES examples/windows.c DESTINATION share/doc/gd-${GDLIB_MAJOR}.${GDLIB_MINOR})
endif(BUILD_EXAMPLES)

if(BUILD_CPACK)
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/COPYING")

set(CPACK_SOURCE_GENERATOR TGZ)
set(CPACK_SOURCE_IGNORE_FILES
"~$"
"\\\\.swp$"
"\\\\.gitignore$"
"^${PROJECT_SOURCE_DIR}/debian/"
"^${PROJECT_SOURCE_DIR}/old/"
"^${PROJECT_SOURCE_DIR}/bld/"
)
install(FILES ${top_level_DOCFILES} DESTINATION ${DOC_DIR})
INCLUDE(CPack)
endif(BUILD_CPACK)