SET(TESTS_FILES image_context matrix)
ADD_GD_TESTS()
SET_TESTS_PROPERTIES(test_vector2d_image_context PROPERTIES LABELS "vector2d-public")
SET_TESTS_PROPERTIES(test_vector2d_matrix PROPERTIES LABELS "vector2d-public")

IF(ENABLE_PNG)
	ADD_EXECUTABLE(test_vector2d_gd_operators gd_operators.c)
	TARGET_LINK_LIBRARIES(test_vector2d_gd_operators gdTest ${GD_LIB})
	ADD_TEST(NAME test_vector2d_gd_operators COMMAND test_vector2d_gd_operators)
	SET_TESTS_PROPERTIES(test_vector2d_gd_operators PROPERTIES LABELS "vector2d-operators")

	ADD_EXECUTABLE(test_vector2d_path_ops path_ops.c)
	TARGET_LINK_LIBRARIES(test_vector2d_path_ops gdTest ${GD_LIB})
	ADD_TEST(NAME test_vector2d_path_ops COMMAND test_vector2d_path_ops)
	SET_TESTS_PROPERTIES(test_vector2d_path_ops PROPERTIES LABELS "vector2d-raster")
	IF(BUILD_STATIC_LIBS)
		ADD_EXECUTABLE(test_vector2d_path_ops_static path_ops.c)
		TARGET_LINK_LIBRARIES(test_vector2d_path_ops_static gdTest ${GD_LIB_STATIC})
		ADD_TEST(NAME test_vector2d_path_ops_static COMMAND test_vector2d_path_ops_static)
		SET_TESTS_PROPERTIES(test_vector2d_path_ops_static PROPERTIES LABELS "vector2d-raster")
	ENDIF()
ENDIF()

IF(BUILD_STATIC_LIBS)
	SET(TESTS_FILES path_structure raster_parity compositor gradient state_save_restore matrix_private)
	ADD_GD_TESTS(${GD_LIB_STATIC})
	SET_TESTS_PROPERTIES(test_vector2d_path_structure PROPERTIES LABELS "vector2d-structural")
	SET_TESTS_PROPERTIES(test_vector2d_raster_parity PROPERTIES LABELS "vector2d-parity")
	SET_TESTS_PROPERTIES(test_vector2d_compositor PROPERTIES LABELS "vector2d-compositor")
	SET_TESTS_PROPERTIES(test_vector2d_gradient PROPERTIES LABELS "vector2d-gradient")
	SET_TESTS_PROPERTIES(test_vector2d_state_save_restore PROPERTIES LABELS "vector2d-state")
	SET_TESTS_PROPERTIES(test_vector2d_matrix_private PROPERTIES LABELS "vector2d-matrix-private")
ENDIF()
